<resources>
    <string name="app_name">Github User Search</string>
    <string name="search">Search"></string>
    <string name="img_placeholder">Image Placeholder</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="search_hint">Search Username</string>
    <string name="dummy_bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt tortor metus, et egestas lacus lacinia vitae. Integer sagittis arcu nisl. Duis euismod, quam vitae accumsan dictum, est sem faucibus risus, ac vulputate justo massa non neque.</string>
    <string name="join_date">Join Date</string>
    <string name="dummy_date">15–01-2025</string>
    <string name="empty_list">Please enter username to search Github Users</string>
</resources>